<resources>
    <string name="app_name">BAWP</string>
    <string name="action_settings">Settings</string>
    <string name="show_as_grid">Show as grid</string>
    <string name="show_as_list">Show as list</string>
    <string name="loginHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="createAccount">Create Account</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="createAccountButton">Create Account</string>
    <string name="title_activity_details">DetailsActivity</string>
</resources>
